<resources>
    <string name="app_name">Taller3</string>
    <string name="welcome">¡Bienvenido!</string>
    <string name="login">Iniciar Sesión</string>
    <string name="singin">Registrarse</string>
    <string name="name">Nombre</string>
    <string name="lastname">Apellido</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="cc">Número de Identificación</string>
    <string name="singinPage">Registro</string>
    <string name="loginPage">Inicio Sesión</string>
    <string name="create">Crear Cuenta</string>
    <string name="loginButton">Iniciar Sesión</string>
    <string name="title_activity_home_screen_maps">Map</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
</resources>