<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".SinginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/main_header">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:text="@string/singinPage"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold|italic"/>

            <LinearLayout
                android:layout_width="295dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/urlProfilePicture"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:src="@drawable/profile"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="50dp">

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/black"
                        android:hint="@string/name"
                        android:textColor="@color/black"
                        android:gravity="center"
                        android:textSize="18sp"/>

                    <EditText
                        android:id="@+id/lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:backgroundTint="@color/black"
                        android:hint="@string/lastname"
                        android:textColor="@color/black"
                        android:gravity="center"
                        android:textSize="18sp"/>

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:backgroundTint="@color/black"
                        android:hint="@string/email"
                        android:textColor="@color/black"
                        android:gravity="center"
                        android:textSize="18sp"/>

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:backgroundTint="@color/black"
                        android:hint="@string/password"
                        android:textColor="@color/black"
                        android:gravity="center"
                        android:textSize="18sp"/>

                    <EditText
                        android:id="@+id/cc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:backgroundTint="@color/black"
                        android:hint="@string/cc"
                        android:textColor="@color/black"
                        android:gravity="center"
                        android:textSize="18sp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="40dp"
                        android:gravity="center">

                        <Button
                            android:id="@+id/signinButton"
                            android:layout_width="238dp"
                            android:layout_height="58dp"
                            android:backgroundTint="@color/white"
                            android:text="@string/create"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold|italic"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>