<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/main_header">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="30dp"
            android:textColor="@color/black"
            android:textStyle="bold|italic"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/welcome">

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:backgroundTint="@color/white"
                android:outlineSpotShadowColor="@color/black"
                android:text="@string/login"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                android:textColor="@color/blue"/>

            <Button
                android:id="@+id/signin"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/white"
                android:outlineSpotShadowColor="@color/black"
                android:text="@string/singin"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                android:textColor="@color/blue"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>