<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/main_header">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/loginPage"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold|italic"/>

            <LinearLayout
                android:layout_width="295dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="44dp"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/emailL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/black"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/passwordL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/black"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="40dp"
                    android:gravity="center">

                    <Button
                        android:id="@+id/loginButton"
                        android:layout_width="238dp"
                        android:layout_height="58dp"
                        android:backgroundTint="@color/white"
                        android:text="@string/loginButton"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold|italic"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>